Add Stimulus capabilities controller

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -23,7 +23,7 @@
     = csrf_meta_tags
     = yield(:og)
     = yield(:meta)
-  %body{ class: user_signed_in? ? '' : 'not-logged-in' }
+  %body{ class: user_signed_in? ? nil : 'not-logged-in', data: { controller: "capabilities" } }
     - if user_signed_in?
       = render 'navigation/main'
     - else
