Add missing form-label class to example input

--- a/app/views/settings/theme/edit.html.haml
+++ b/app/views/settings/theme/edit.html.haml
@@ -93,7 +93,7 @@
           = f.text_field :input_placeholder, class: "color", data: { default: 0x6C757D, theme_target: "color" }
         .col-sm-6
           .form-group
-            %label Example Input
+            %label.form-label Example Input
             %input.form-control{ placeholder: "A test placeholder" }
   .card
     .card-body
