--- a/app/views/settings/theme/edit.html.haml
+++ b/app/views/settings/theme/edit.html.haml
@@ -7,7 +7,10 @@
     - if current_user.theme
       .pull-right
         = link_to t(".delete"), settings_theme_path, data: { turbo_confirm: t("voc.confirm"), turbo_method: :delete }, tabindex: -1, class: "btn btn-danger"
-= bootstrap_form_for(current_user.theme || Theme.new, html: { id: "update" }, method: :patch, data: { turbo: false, controller: "theme", action: "theme#submit" }) do |f|
+= bootstrap_form_for(current_user.theme || Theme.new,
+  html: { id: "update" },
+  method: :patch,
+  data: { turbo: false, controller: "theme", action: "theme#submit" }) do |f|
   .card
     .card-body
       %h2= t(".general.heading")
