timeline: only provide #index, #public and #list as GET

--- a/app/views/timeline/timeline.html.haml
+++ b/app/views/timeline/timeline.html.haml
@@ -4,8 +4,11 @@
 
 - if @more_data_available
   .d-flex.justify-content-center#paginator
-    = button_to "#{request.path}?last_id=#{@timeline_last_id}", class: "btn btn-light" do
-      = t("voc.load")
+    = button_to t("voc.load"), request.path,
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @timeline_last_id },
+      form: { data: { turbo_stream: true } }
 
 - provide(:title, @title || APP_CONFIG["site_name"])
 - parent_layout 'feed'
