moderation/inbox: only provide #index as GET

--- a/app/views/moderation/inbox/index.html.haml
+++ b/app/views/moderation/inbox/index.html.haml
@@ -10,5 +10,8 @@
 
   - if @more_data_available
     .d-flex.justify-content-center#paginator
-      = button_to mod_inbox_index_path(@user, last_id: @inbox_last_id), class: "btn btn-light" do
-        = t("voc.load")
+      = button_to t("voc.load"), mod_inbox_index_path(@user),
+        class: "btn btn-light",
+        method: :get,
+        params: { last_id: @inbox_last_id },
+        form: { data: { turbo_stream: true } }
