moderation/reports: only provide #index as GET

--- a/app/views/moderation/reports/index.html.haml
+++ b/app/views/moderation/reports/index.html.haml
@@ -4,7 +4,10 @@
 
 - if @more_data_available
   .d-flex.justify-content-center.justify-content-sm-start#paginator
-    = button_to moderation_reports_path(last_id: @reports_last_id, type: params[:type]), class: "btn btn-light" do
-      = t("voc.load")
+    = button_to t("voc.load"), moderation_reports_path(type: params[:type]),
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @reports_last_id },
+      form: { data: { turbo_stream: true } }
 
 - parent_layout "moderation"
