--- a/app/views/moderation/reports/index.turbo_stream.haml
+++ b/app/views/moderation/reports/index.turbo_stream.haml
@@ -4,5 +4,8 @@
 
 = turbo_stream.update "paginator" do
   - if @more_data_available
-    = button_to moderation_reports_path(last_id: @reports_last_id, type: params[:type]), class: "btn btn-light" do
-      = t("voc.load")
+    = button_to t("voc.load"), moderation_reports_path(type: params[:type]),
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @reports_last_id },
+      form: { data: { turbo_stream: true } }
