Add option to view comments in rails admin

--- a/app/views/actions/_comment.html.haml
+++ b/app/views/actions/_comment.html.haml
@@ -10,3 +10,7 @@
     %a.dropdown-item{ href: "#", data: { action: "ab-comment-report", c_id: comment.id } }
       %i.fa.fa-fw.fa-exclamation-triangle
       = t("voc.report")
+  - if current_user.admin?
+    %a.dropdown-item{ href: rails_admin_path_for_resource(comment), target: "_blank" }
+      %i.fa.fa-fw.fa-gears
+      = t("voc.view_in_rails_admin")
