--- a/app/views/notifications/index.turbo_stream.haml
+++ b/app/views/notifications/index.turbo_stream.haml
@@ -7,6 +7,8 @@
 
 = turbo_stream.update "paginator" do
   - if @more_data_available
-    = button_to notifications_path(last_id: @notifications_last_id, type: params[:type]), class: "btn btn-light" do
-      = t("voc.load")
-
+    = button_to t("voc.load"), notifications_path(type: params[:type]),
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @notifications_last_id },
+      form: { data: { turbo_stream: true } }
