--- a/app/views/question/show.turbo_stream.haml
+++ b/app/views/question/show.turbo_stream.haml
@@ -4,5 +4,8 @@
 
 = turbo_stream.update "paginator" do
   - if @more_data_available
-    = button_to question_path(@question.user.screen_name, @question.id, last_id: @answers_last_id), class: "btn btn-light" do
-      = t("voc.load")
+    = button_to t("voc.load"), question_path(@question.user.screen_name, @question.id),
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @answers_last_id },
+      form: { data: { turbo_stream: true } }
