--- a/app/views/user/questions.html.haml
+++ b/app/views/user/questions.html.haml
@@ -4,8 +4,11 @@
 
 - if @more_data_available
   .d-flex.justify-content-center.justify-content-sm-start#paginator
-    = button_to show_user_questions_path(@user, last_id: @questions_last_id), class: "btn btn-light" do
-      = t("voc.load")
+    = button_to t("voc.load"), show_user_questions_path(@user),
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @questions_last_id },
+      form: { data: { turbo_stream: true } }
 
 - provide(:title, questions_title(@user))
 - parent_layout 'user/profile'
