--- a/app/views/user/questions.turbo_stream.haml
+++ b/app/views/user/questions.turbo_stream.haml
@@ -4,5 +4,8 @@
 
 = turbo_stream.update "paginator" do
   - if @more_data_available
-    = button_to show_user_questions_path(@user, last_id: @questions_last_id), class: "btn btn-light" do
-      = t("voc.load")
+    = button_to t("voc.load"), show_user_questions_path(@user),
+      class: "btn btn-light",
+      method: :get,
+      params: { last_id: @questions_last_id },
+      form: { data: { turbo_stream: true } }
