Add raised-text and raised-accent-text theme variables

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -125,6 +125,8 @@ $spacers: map-merge($rs-spacers, $spacers);
   --muted-text: 108, 117, 125;
   --input-text: 0, 0, 0;
   --input-placeholder: 108, 117, 125;
+  --raised-text: 0, 0, 0;
+  --raised-accent-text: 0, 0, 0;
 
   --turbolinks-progress-color: #a58adc; // --primary lightened by 25%
 }
