--- a/app/assets/stylesheets/overrides/_card.scss
+++ b/app/assets/stylesheets/overrides/_card.scss
@@ -4,6 +4,7 @@
   margin-bottom: map.get($spacers, 3);
   box-shadow: $box-shadow-sm;
   background-color: var(--raised-bg);
+  color: RGB(var(--raised-text));
 
   p:last-child {
     margin-bottom: 0;
@@ -17,4 +18,5 @@
 .card-header,
 .card-footer {
   background-color: var(--raised-accent);
+  color: RGB(var(--raised-accent-text));
 }
