--- a/app/views/user/show_follow.turbo_stream.haml
+++ b/app/views/user/show_follow.turbo_stream.haml
@@ -1,11 +1,11 @@
 = turbo_stream.append "users" do
   - @users.each do |user|
     .col.pb-3
-      = render 'shared/userbox', user: user, type: @type
+      = render 'shared/userbox', user:, type:
 
 = turbo_stream.update "paginator" do
   - if @more_data_available
-    = button_to t("voc.load"), @type == :follower ? show_user_followers_path(@user) : show_user_followings_path(@user),
+    = button_to t("voc.load"), type == :follower ? show_user_followers_path(@user) : show_user_followings_path(@user),
       class: "btn btn-light",
       method: :get,
       params: { last_id: @relationships_last_id },
