Let relevant style overrides use the new raised text colors

--- a/app/assets/stylesheets/components/_notifications.scss
+++ b/app/assets/stylesheets/components/_notifications.scss
@@ -42,7 +42,7 @@
     & .dropdown-item:hover,
     & .dropdown-item:active {
       background: transparent;
-      color: RGB(var(--body-text));
+      color: RGB(var(--raised-text));
     }
   }
 
