--- a/app/assets/stylesheets/overrides/_list-group.scss
+++ b/app/assets/stylesheets/overrides/_list-group.scss
@@ -13,9 +13,10 @@
 }
 
 .list-group-item-action {
-  color: RGB(var(--body-text));
+  color: RGB(var(--raised-text));
 
   &:hover, &:focus {
+    color: RGB(var(--raised-accent-text));
     background-color: var(--raised-accent);
   }
 
