--- a/app/views/user/show.html.haml
+++ b/app/views/user/show.html.haml
@@ -1,11 +1,11 @@
 - unless @user.banned?
-  #pinned_answers
+  #pinned-answers
     - @user.answers.pinned.each do |a|
-      = render 'answerbox', a:
+      = render "answerbox", a:
 
   #answers
     - @answers.each do |a|
-      = render 'answerbox', a:
+      = render "answerbox", a:
 
 - if @more_data_available
   .d-flex.justify-content-center.justify-content-sm-start#paginator
