--- a/app/views/user/_actions.html.haml
+++ b/app/views/user/_actions.html.haml
@@ -7,7 +7,7 @@
       %a.btn.btn-dark{ href: settings_profile_path } Edit profile
   - elsif user_signed_in?
     .d-grid.gap-2
-      - if own_followings&.include? user.id || current_user.following?(user)
+      - if own_followings&.include?(user.id) || current_user.following?(user)
         %button.btn.btn-primary{ type: :button, name: 'user-action', data: { action: :unfollow, type: type, target: user.screen_name } }
           = t("voc.unfollow")
       - else
@@ -21,7 +21,7 @@
           %a.dropdown-item.d-block.d-sm-none{ href: '#', data: { bs_target: '#modal-list-memberships', bs_toggle: :modal } }
             %i.fa.fa-list.fa-fw
             = t(".list")
-          - if own_blocks&.include? user.id || current_user.blocking?(user)
+          - if own_blocks&.include?(user.id) || current_user.blocking?(user)
             %a.dropdown-item{ href: '#', data: { action: :unblock, target: user.screen_name } }
               %i.fa.fa-minus-circle.fa-fw
               %span.pe-none= t("voc.unblock")
