Use static colour for Safari mask icon
This gets very aggressively cached so there isn't much of a point in making it respond to user themes as it doesn't always stay up to date.

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -13,7 +13,7 @@
       %meta{ name: 'robots', content: 'noindex' }
     %link{ rel: 'manifest', href: '/manifest.json', crossorigin: 'use-credentials' }
     %link{ rel: 'apple-touch-icon', href: '/icons/maskable_icon_x192.png' }
-    %link{ rel: 'mask-icon', href: '/icons/icon.svg', color: theme_color }
+    %link{ rel: 'mask-icon', href: '/icons/icon.svg', color: "#5e35b1" }
     %link{ rel: 'icon', href: '/images/favicon/favicon-16.png', sizes: '16x16' }
     %link{ rel: 'icon', href: '/icons/maskable_icon_x192.png', sizes: '192x192' }
     %link{ rel: 'icon', href: '/images/favicon/favicon-32.png', sizes: '32x32' }
