--- a/app/views/tabs/_settings.html.haml
+++ b/app/views/tabs/_settings.html.haml
@@ -4,7 +4,7 @@
     = list_group_item t(".profile"), edit_settings_profile_path
     = list_group_item t(".privacy"), edit_settings_privacy_path
     = list_group_item t(".security"), settings_two_factor_authentication_otp_authentication_path
-    = list_group_item t(".sharing"), services_path
+    = list_group_item t(".sharing"), settings_services_path
     = list_group_item t(".mutes"), settings_muted_path
     = list_group_item t(".blocks"), settings_blocks_path
     = list_group_item t(".theme"), edit_settings_theme_path
