Appease the dog overlords

--- a/app/views/inbox/_entry.html.haml
+++ b/app/views/inbox/_entry.html.haml
@@ -36,10 +36,11 @@
         %p.format-help.ms-auto.align-self-center.mt-2.mt-sm-0.text-center
           = render "shared/format_link"
     - if current_user.sharing_enabled
-      .inbox-entry__sharing.text-center.p-2.justify-content-center.d-none{ data: { controller: "inbox-sharing", inbox_sharing_config_value: "{}", inbox_sharing_auto_close_value: current_user.sharing_autoclose.to_s }}
+      .inbox-entry__sharing.text-center.p-2.justify-content-center.d-none{
+        data: { controller: "inbox-sharing", inbox_sharing_config_value: "{}", inbox_sharing_auto_close_value: current_user.sharing_autoclose.to_s } }
         %button.btn-close.inbox-entry__close{ data: { action: "inbox-sharing#close" } }
           %span.visually-hidden= t("voc.close")
-        %div.align-self-center
+        .align-self-center
           %p.fs-3.fw-bold= t(".sharing.heading")
           %p
             %a.btn.btn-primary{ href: "https://twitter.com/intent/tweet?text=", data: { inbox_sharing_target: "twitter" }, target: "_blank" }
