--- a/app/views/inbox/_entry.html.haml
+++ b/app/views/inbox/_entry.html.haml
@@ -49,7 +49,7 @@
             %a.btn.btn-primary{ href: "#", data: { inbox_sharing_target: "tumblr" }, target: "_blank" }
               %i.fab.fa-tumblr.fa-fw
               Tumblr
-            - unless current_user.sharing_custom_url.blank?
+            - if current_user.sharing_custom_url.present?
               %a.btn.btn-primary{ href: current_user.sharing_custom_url, data: { inbox_sharing_target: "custom" }, target: "_blank" }
                 = current_user.display_sharing_custom_url
           %p.text-muted= t(".sharing.hint_html", settings: link_to(t(".sharing.settings"), settings_sharing_path))
