Highlight direct questions in own question lists

--- a/app/views/moderation/questions/show.html.haml
+++ b/app/views/moderation/questions/show.html.haml
@@ -5,4 +5,4 @@
 
 .container-lg.container--main
   - @questions.each do |q|
-    = render 'shared/question', q: q, type: nil
+    = render "shared/question", q:, type: "moderation"
