Implement unpinning answers

--- a/app/views/actions/_pin.html.haml
+++ b/app/views/actions/_pin.html.haml
@@ -1,5 +1,5 @@
 - if answer.pinned?
-  = button_to pin_answer_path(id: answer.id),
+  = button_to unpin_answer_path(id: answer.id),
     class: "dropdown-item",
     method: :delete,
     form: { id: "ab-pin-#{answer.id}", data: { turbo_stream: true } } do
