Show indicator for pinned answers

--- a/app/assets/stylesheets/components/_answerbox.scss
+++ b/app/assets/stylesheets/components/_answerbox.scss
@@ -82,8 +82,20 @@
     }
   }
 
+  &__pinned {
+    display: none;
+  }
+
   .card-body {
     padding-bottom: .6rem;
+  }
+}
+
+#pinned-answers {
+  .answerbox {
+    &__pinned {
+      display: inline;
+    }
   }
 }
 
