Limit to 10 pinned answers

--- a/app/views/user/show.html.haml
+++ b/app/views/user/show.html.haml
@@ -1,6 +1,6 @@
 - unless @user.banned?
   #pinned-answers
-    - @user.answers.pinned.each do |a|
+    - @pinned_answers.each do |a|
       = render "answerbox", a:
 
   #answers
