--- a/app/views/application/_answerbox.html.haml
+++ b/app/views/application/_answerbox.html.haml
@@ -27,7 +27,7 @@
         .col-md-6.text-start.text-muted
           %i.fa.fa-clock-o
           = link_to(raw(t("time.distance_ago", time: time_tooltip(a))), answer_path(a.user.screen_name, a.id), class: "answerbox__permalink")
-          - if instance_variable_defined?(:@user) && @user == a.user && a.pinned_at.present?
+          - if a.pinned_at.present?
             %span.answerbox__pinned
               ·
               %i.fa.fa-thumbtack
