Appease the dog overlords

--- a/app/assets/stylesheets/components/_answerbox.scss
+++ b/app/assets/stylesheets/components/_answerbox.scss
@@ -92,10 +92,9 @@
 }
 
 #pinned-answers {
-  .answerbox {
-    &__pinned {
-      display: inline;
-    }
+
+  .answerbox__pinned {
+    display: inline;
   }
 }
 
