Appease the dog overlords

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -31,7 +31,7 @@
     = render 'shared/announcements'
     = yield
     = render "shared/formatting"
-    #toasts.d-none
+    .d-none#toasts
     - if Rails.env.development?
       #debug
         %hr
