Appease the dog overlords

--- a/app/views/answerbox/_actions.html.haml
+++ b/app/views/answerbox/_actions.html.haml
@@ -13,4 +13,4 @@
   .btn-group
     %button.btn.btn-default.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
       %span.caret
-    = render "actions/answer", answer: a
+    = render "actions/answer", answer: a, subscribed_answer_ids:
